--- a/tests/unit.suite.yml
+++ b/tests/unit.suite.yml
@@ -3,9 +3,9 @@
 # suite for unit (internal) tests.
 # RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
 
-actor: UnitTester
+class_name: UnitTester
 modules:
     enabled:
       - Asserts
       - Yii2:
-            part: [orm, email, fixtures]
+            part: [orm, email]
